--- a/backup/style.css
+++ b/backup/style.css
@@ -1,7 +1,7 @@
 /* Centraliza o formulário como no Google Forms */
 body {
-  font-family: 'Arial', sans-serif; 
-  background: linear-gradient(180deg, #1a1a1a, #333333);
+  font-family: 'Calibri', sans-serif; 
+  background: linear-gradient(180deg, #0d0d0d, #1a1a1a);
   height: 100vh;
   margin: 0;
   display: flex;
@@ -12,7 +12,7 @@ body {
 
 /* Container do formulário */
 #kycForm {
-  background-color: #2c2c2c;
+  background-color: #1e1e1e; 
   padding: 40px;
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
@@ -25,7 +25,7 @@ body {
 /* Título do formulário */
 h1 {
   text-align: center;
-  font-size: 2.5em;
+  font-size: 3em; 
   margin-bottom: 20px;
   color: #ffffff;
 }
@@ -33,26 +33,21 @@ h1 {
 /* Títulos secundários */
 h2 {
   text-align: center;
-  font-size: 2em;
+  font-size: 2.5em; 
   margin: 20px 0;
   color: #ffffff;
-}
-
-/* Estilo dos grupos de formulário */
-.form-group {
-  margin-bottom: 25px;
 }
 
 /* Estilo dos rótulos */
 label {
   font-weight: bold;
   margin-bottom: 8px;
-  font-size: 1.1em;
+  font-size: 1.3em; 
   color: #ffffff;
-  display: block; /* Garante que o rótulo ocupe uma linha inteira */
+  display: block; 
 }
 
-/* Estilo dos campos de texto e textarea */
+/* Estilo dos campos de texto */
 input[type="text"],
 input[type="date"],
 input[type="url"],
@@ -61,7 +56,7 @@ input[type="number"] {
   padding: 12px;
   border: 1px solid #555;
   border-radius: 5px;
-  font-size: 1.1em;
+  font-size: 1.2em; 
   width: 100%;
   box-sizing: border-box;
   background-color: #444444;
@@ -79,10 +74,17 @@ input:focus {
 /* Estilo dos grupos de radio */
 .radio-group {
   display: flex;
-  gap: 10px;
+  gap: 20px; 
   align-items: center;
-  color: #ffffff;
+  color: #ffffff; 
 }
+
+/* Estilo dos botões de rádio */
+.radio-group input[type="radio"] {
+  transform: scale(1.5); 
+  margin-right: 10px; 
+}
+
 
 /* Botão de enviar */
 button[type="submit"] {
@@ -94,7 +96,7 @@ button[type="submit"] {
   cursor: pointer;
   border-radius: 5px;
   width: 100%;
-  font-size: 1.2em;
+  font-size: 1.4em; 
   transition: background-color 0.3s, transform 0.2s;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
@@ -132,14 +134,22 @@ th {
   }
 
   h1 {
-    font-size: 2em; /* Ajusta o tamanho do título principal em telas menores */
+    font-size: 2.5em; 
   }
 
   h2 {
-    font-size: 1.5em; /* Ajusta o tamanho do título secundário em telas menores */
+    font-size: 2em; 
   }
 
   button {
-    font-size: 1em;
+    font-size: 1.2em; 
   }
+}
+
+/* Estilo para a descrição */
+.descricao {
+  font-size: 1em; 
+  color: #ffffff; 
+  margin-bottom: 20px; 
+  text-align: left; 
 }
